force-app/main/default/objects/Exclusive_Campaign_Product__c/Exclusive_Campaign_Product__c.object-meta.xml
<CustomObject>
    <label>Exclusive Campaign Product</label>
    <nameField>
        <label>Exclusive Campaign Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exclusive Campaign Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>