force-app/main/default/objects/Exclusive_Campaign_Product__c/fields/Artist_Name__c.field-meta.xml
<CustomField>
    <fullName>Artist_Name__c</fullName>
    <label>Artist Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>