force-app/main/default/objects/Exclusive_Campaign_Product__c/fields/Limited_Edition__c.field-meta.xml
<CustomField>
    <fullName>Limited_Edition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description/ Type of the product</description>
    <label>Limited Edition</label>
    <type>Checkbox</type>
</CustomField>