force-app/main/default/objects/Exclusive_Campaign_Product__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Description/ Name of the model</description>
    <label>Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>