force-app/main/default/objects/Exclusive_Campaign_Product__c/fields/Product_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalogue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product (Catalogue)</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipLabel>Exclusive Campaign Products</relationshipLabel>
    <relationshipName>Exclusive_Campaign_Products</relationshipName>
    <type>Lookup</type>
</CustomField>