force-app/main/default/objects/Exclusive_Campaign_Product__c/fields/Total_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders__c</fullName>
    <label>Total Orders</label>
    <summaryForeignKey>Exclusive_Campaign_Order__c.Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>