force-app/main/default/objects/Exclusive_Campaign_Product__c/fields/Total_Products_Available_For_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Products_Available_For_Orders__c</fullName>
    <label>Total Products Available For Orders</label>
    <summaryFilterItems>
        <field>Exclusive_Campaign_Order__c.Reserved__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Exclusive_Campaign_Order__c.Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>