force-app/main/default/objects/Exclusive_Campaign_Product__c/listViews/Artycap_2022_Products.listView-meta.xml
<ListView>
    <fullName>Artycap_2022_Products</fullName>
    <columns>NAME</columns>
    <columns>Sku_Number__c</columns>
    <columns>Product_Image__c</columns>
    <columns>Model__c</columns>
    <columns>Artist_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>Artycap 2022 - Products</label>
</ListView>