force-app/main/default/objects/Exclusive_Campaign_Product__c/listViews/Artycap_2023_Products.listView-meta.xml
<ListView>
    <fullName>Artycap_2023_Products</fullName>
    <columns>NAME</columns>
    <columns>Sku_Number__c</columns>
    <columns>Product_Image__c</columns>
    <columns>Artist_Name__c</columns>
    <columns>Color__c</columns>
    <columns>Model__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exclusive_Campaign__c</field>
        <operation>equals</operation>
        <value>Artycapucines 2023</value>
    </filters>
    <label>Artycap 2023 - Products</label>
</ListView>