force-app/main/default/objects/Exclusive_Campaign_Product__c/listViews/LV_x_FG_Products.listView-meta.xml
<ListView>
    <fullName>LV_x_FG_Products</fullName>
    <columns>NAME</columns>
    <columns>Sku_Number__c</columns>
    <columns>Product_Image__c</columns>
    <columns>Artist_Name__c</columns>
    <columns>Color__c</columns>
    <columns>Model__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exclusive_Campaign__c</field>
        <operation>equals</operation>
        <value>LV x FG</value>
    </filters>
    <label>LV x FG - Products</label>
</ListView>